# schema_org_crates

./: .gitignore  Cargo.toml  README.md
schema_org_constants/: Cargo.toml  README.md
schema_org_constants/src/: lib.rs  schemas.rs
schema_org_constants/src/schemas/: abdomen.rs  about_page.rs  about_property.rs  abridged_property.rs  abstract_property.rs  acceleration_time_property.rs  accept_action.rs  accepted_answer_property.rs  accepted_offer_property.rs  accepted_payment_method_property.rs  accepts_reservations_property.rs  access_code_property.rs  access_mode_property.rs  access_mode_sufficient_property.rs  accessibility_api_property.rs  accessibility_control_property.rs  accessibility_feature_property.rs  accessibility_hazard_property.rs  accessibility_summary_property.rs  accommodation.rs  accommodation_category_property.rs  accommodation_floor_plan_property.rs  account_id_property.rs  account_minimum_inflow_property.rs  account_overdraft_limit_property.rs  accountable_person_property.rs  accounting_service.rs  achieve_action.rs  acquire_license_page_property.rs  acquired_from_property.rs  acriss_code_property.rs  action.rs  action_access_specification.rs  action_accessibility_requirement_property.rs  action_application_property.rs  action_option_property.rs  action_platform_property.rs  action_status_property.rs  action_status_type.rs  actionable_feedback_policy_property.rs  (+2825 more)
schema_org_traits/: Cargo.toml  README.md
schema_org_traits/src/: json_ld_0_15.rs  json_ld_0_16.rs  lib.rs  schemas.rs
schema_org_traits/src/json_ld/tests/: recipe_schema_graph.json
schema_org_traits/src/schemas/: classes.rs  properties.rs
schema_org_traits/src/schemas/classes/: abdomen.rs  about_page.rs  accept_action.rs  accommodation.rs  accounting_service.rs  achieve_action.rs  action.rs  action_access_specification.rs  action_status_type.rs  activate_action.rs  activation_fee.rs  active_action_status.rs  active_not_recruiting.rs  add_action.rs  administrative_area.rs  adult_entertainment.rs  adult_oriented_enumeration.rs  advertiser_content_article.rs  aerobic_activity.rs  aggregate_offer.rs  aggregate_rating.rs  agree_action.rs  airline.rs  airport.rs  album_release.rs  alcohol_consideration.rs  algorithmic_media_digital_source.rs  algorithmically_enhanced_digital_source.rs  alignment_object.rs  all_wheel_drive_configuration.rs  allergies_health_aspect.rs  allocate_action.rs  am_radio_channel.rs  amp_story.rs  amusement_park.rs  anaerobic_activity.rs  analysis_news_article.rs  anatomical_structure.rs  anatomical_system.rs  android_platform.rs  (+1351 more)
schema_org_traits/src/schemas/properties/: about_property.rs  abridged_property.rs  abstract_property.rs  acceleration_time_property.rs  accepted_answer_property.rs  accepted_offer_property.rs  accepted_payment_method_property.rs  accepts_reservations_property.rs  access_code_property.rs  access_mode_property.rs  access_mode_sufficient_property.rs  (+1463 more)
(+25 files in other folders)
