[package]
name = "schema_org_constants"
description = "Schema.org schemas as Rust constants"
version = "0.0.3"
edition = "2021"
license = "MIT"
repository = "https://github.com/Toromyx/schema_org_crates"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true

[features]
default = []
