[package]
name = "schema_org_traits"
description = "Schema.org schemas as Rust traits"
version = "0.0.6"
edition = "2021"
license = "MIT"
repository = "https://github.com/Toromyx/schema_org_crates"

# https://docs.rs/about/metadata
[package.metadata.docs.rs]
all-features = true

[dependencies.iref_2]
package = "iref"
version = "^2.2"
optional = true

[dependencies.iref_3]
package = "iref"
version = "^3.1"
optional = true

[dependencies.json-ld_0_15]
package = "json-ld"
version = "^0.15.1"
optional = true

[dependencies.json-ld_0_16]
package = "json-ld"
version = "^0.16.0"
optional = true

[dependencies.schema_org_constants]
path = "../schema_org_constants"
version = "^0.0.4"
optional = true

[dependencies.rdf-types_0_15]
package = "rdf-types"
version = "^0.15.4"
optional = true
features = ["meta"]

[dependencies.rdf-types_0_22]
package = "rdf-types"
version = "^0.22.0"
optional = true

[dev-dependencies.pretty_assertions]
version = "^1.4"

[dev-dependencies.tokio]
version = "^1.35"
features = ["full"]

[features]
default = []
json-ld = [
    "json-ld_0_16",
]
json-ld_0_15 = [
    "dep:schema_org_constants",
    "dep:json-ld_0_15",
    "dep:rdf-types_0_15",
    "dep:iref_2",
]
json-ld_0_16 = [
    "dep:schema_org_constants",
    "dep:json-ld_0_16",
    "dep:rdf-types_0_22",
    "dep:iref_3",
]
test = [
    "json-ld_0_15",
    "json-ld_0_15/reqwest",
    "json-ld_0_16",
    "json-ld_0_16/reqwest",
]